welcome.lessons.welcome.variables.Variables.scala.error
Variables:12: error: not found: value nbpas
while (dejaFait!=nbpas) {
                 ^