welcome.lessons.welcome.variables.Variables.scala.code
var nbPas: Int = 0 

while (!estSurBiscuit()) {
  avance();
  nbPas = nbPas + 1;
}

prendBiscuit()

var dejaFait: Int = 0

while (dejaFait!=nbpas) {
  recule;
  dejaFait = dejaFait + 1;
}

poseBiscuit()